# trip_ai

./: README.md
ai_trip/tripcrew/: Makefile  README.md  app.py  credentials.env.sample  crew.py  main.py  pyproject.toml
ai_trip/tripcrew/config/: agents.yaml  config.py  tasks.yaml
ai_trip/tripcrew/tools/: google_api.py  google_places_tool.py  route_optimization.py
tripcrew/: app.py  credentials.env.sample  crews.py  guide.json  itinerary.md  itinerary2.md  main.py  my_flow_plot.html  pyproject.toml
tripcrew/config/: base_models.py  tasks.yaml
tripcrew/docs/: itinerary.md
tripcrew/public/elements/: linear.jsx
tripcrew/tools/: google_api.py  google_places_tool.py
